[gd_scene load_steps=2 format=3 uid="uid://dtyguiha773pm"]

[ext_resource type="Script" path="res://Scenes/Main/Menus/main.gd" id="1_r1fhp"]

[node name="Main" type="Node2D"]
script = ExtResource("1_r1fhp")

[node name="StartMenu" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
anchors_preset = -1
anchor_left = 0.383333
anchor_top = 0.453704
anchor_right = 0.616667
anchor_bottom = 0.547222
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="IpInput" type="LineEdit" parent="StartMenu/VBoxContainer"]
offset_right = 448.0
offset_bottom = 31.0
text = "127.0.0.1"
placeholder_text = "IP"
alignment = 1

[node name="PortInput" type="LineEdit" parent="StartMenu/VBoxContainer"]
offset_top = 35.0
offset_right = 448.0
offset_bottom = 66.0
text = "25565"
placeholder_text = "Port"
alignment = 1

[node name="HostGame" type="Button" parent="StartMenu/VBoxContainer"]
offset_top = 70.0
offset_right = 448.0
offset_bottom = 101.0
text = "Host"

[node name="JoinGame" type="Button" parent="StartMenu/VBoxContainer"]
offset_top = 105.0
offset_right = 448.0
offset_bottom = 136.0
text = "Join"

[node name="QuitGame" type="Button" parent="StartMenu/VBoxContainer"]
offset_top = 140.0
offset_right = 448.0
offset_bottom = 171.0
text = "Quit"

[node name="Error" type="Label" parent="StartMenu"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="StartMenu/VBoxContainer/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/QuitGame" to="StartMenu" method="_on_quit_game_pressed"]
